[gd_scene load_steps=9 format=3 uid="uid://dx1hvas6t4cv0"]

[ext_resource type="FontFile" uid="uid://psucj3rikhfu" path="res://assets/Fonts/SpiritsRegular-OEKo.ttf" id="1_o6vhb"]
[ext_resource type="StyleBox" uid="uid://1w14wqut0rd" path="res://Themes/ButtonNormal.tres" id="2_rw2ur"]
[ext_resource type="StyleBox" uid="uid://con1qacn2v0ro" path="res://Themes/ButtonHover.tres" id="3_uuyje"]
[ext_resource type="StyleBox" uid="uid://b1in0jw7br4kt" path="res://Themes/ButtonDisabled.tres" id="4_xmor1"]
[ext_resource type="Script" path="res://Button.gd" id="5_rs8kj"]
[ext_resource type="AudioStream" uid="uid://dxvxp5uidhvdh" path="res://assets/sounds/pop_sound.mp3" id="6_bmqj6"]
[ext_resource type="AudioStream" uid="uid://b2mrvh3owiq1c" path="res://assets/sounds/tap-notification-180637.mp3" id="7_d0umg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_srnr4"]

[node name="OutroScene" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.0784314, 0.145098, 1)

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
offset_left = -430.0
offset_right = 430.0
offset_bottom = 96.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_o6vhb")
theme_override_font_sizes/font_size = 30
text = "You have accomplished every goal you set out to achieve.
The beast's hunger is satiated for now.
They will return to their realm, and you have relinquished the power to summon."
horizontal_alignment = 1

[node name="Button" type="Button" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.5
offset_top = -21.5
offset_right = 122.5
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
theme_override_fonts/font = ExtResource("1_o6vhb")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("2_rw2ur")
theme_override_styles/hover = ExtResource("3_uuyje")
theme_override_styles/pressed = ExtResource("4_xmor1")
theme_override_styles/disabled = ExtResource("4_xmor1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_srnr4")
text = "Return to Main Menu"
script = ExtResource("5_rs8kj")

[node name="PopSound" type="AudioStreamPlayer" parent="Control/Button"]
stream = ExtResource("6_bmqj6")

[node name="ButtonClick" type="AudioStreamPlayer" parent="Control/Button"]
stream = ExtResource("6_bmqj6")
volume_db = -10.0

[node name="ButtonHover" type="AudioStreamPlayer" parent="Control/Button"]
stream = ExtResource("7_d0umg")
volume_db = -10.0

[node name="WaitTimer" type="Timer" parent="Control/Button"]
wait_time = 5.0
autostart = true

[connection signal="pressed" from="Control/Button" to="Control/Button" method="_on_pressed"]
